# perfect-rust

./: .gitignore
chapter02/src/: arithmetic.rs  assign.rs  bit.rs  comparison.rs  logical.rs  main.rs
chapter03/src/: constant.rs  main.rs  scope.rs  static_val.rs  variable.rs
chapter04/src/: array_type.rs  boolean_type.rs  char_type.rs  floating_type.rs  integer_type.rs  main.rs  pointer_type.rs  slice_type.rs  str_type.rs  tuple_type.rs
chapter05/src/: branch_if.rs  branch_match.rs  main.rs  repeat_for.rs  repeat_loop.rs  repeat_while.rs
chapter06/: Cargo.toml
chapter06/src/: box_type.rs  date_time_type.rs  hash_map_type.rs  hash_set_type.rs  linked_list_type.rs  main.rs  string_type.rs  vec_type.rs
chapter07/src/: basic_function.rs  closure.rs  function_type.rs  generics.rs  life_time.rs  main.rs  option_type.rs  ownership.rs  reference.rs  result_type.rs
chapter08/src/: border.rs  constant.rs  customer.rs  generics.rs  main.rs  member.rs  name_field_type.rs  tuple_unit_type.rs
chapter09/src/: basic.rs  generics.rs  main.rs  struct.rs  tuple.rs
chapter10/: Cargo.toml
chapter10/data/: products.csv  products.json
chapter10/src/: basic.rs  main.rs
chapter10/src/association/: entities.rs  mod.rs  traits.rs  traits_impl.rs  try_out.rs
chapter10/src/generics/: mod.rs  services.rs  sub.rs  traits.rs  traits_impl.rs  try_out.rs
chapter11/: Cargo.toml
chapter11/src/: anyhow.rs  basic.rs  main.rs  original_error.rs  panic.rs  this_error.rs
chapter12/: Cargo.toml
chapter12/resources/: customers.csv  customers.json
chapter12/src/: asynchronous.rs  basic.rs  client.rs  controller.rs  cross_beam.rs  customer.rs  exclusive_mutex.rs  exclusive_rwlock.rs  exclusive_shardedlock.rs  main.rs  messaging_crossbeam.rs  messaging_std.rs  station.rs  writer.rs
chapter13/: Cargo.toml
chapter13/src/: document_test.rs  lib.rs  (+1 more)
chapter14/: Cargo.toml  Makefile  compose.yml
chapter15/: Cargo.toml  Makefile  compose.yml
chapter15/src/: client.rs  entity.rs  impl_repository.rs  lib.rs  repository.rs
chapter16/: Cargo.toml  compose.yml
chapter16/src/: lib.rs  pool.rs  product_category_repository.rs  product_repository.rs  repository.rs
chapter16/src/models/: mod.rs  prelude.rs  product.rs  product_category.rs
chapter17/: Cargo.toml
chapter17/src/: main.rs  sample_handler.rs  tera_handler.rs
chapter17/templates/pages/: index.html  layout.html  result.html
(+20 files in other folders)
