[package]
name = "chapter10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 汎用的なResult型、Error型を提供
anyhow = "1.0"
# シリアライズ、デシリアライズ機能を提供
serde = {version = "1.0", features = ["derive"]}
# JSONのシリアライズ、デシリアライズ機能を提供
serde_json = "1.0"
# CSVファイルへのアクセス機能を提供
csv = "1.3.0"
