[package]
name = "chapter12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
csv = "1.3.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
