[package]
name = "chapter15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7.0"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
proc-macro2 = "1.0.69"
futures-util = "0.3.28"
anyhow = "1.0.75"
lombok = "0.4.0"
async-trait = "0.1.74"
